skan_tests/error/failed_expr.sk

int main() {
    int a= 1;
    bool b=true;
    int c= a +b; /*bool +int Error */
    return 0;
}